tests/js_error/source_locations/statement/for_await/get_async_iterator_module.exp
Error: 
  ┌ tests/js_error/source_locations/statement/for_await/get_async_iterator_module.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at <anonymous> (tests/js_error/source_locations/statement/for_await/get_async_iterator_module.js:3:11)
  at foo (tests/js_error/source_locations/statement/for_await/get_async_iterator_module.js:8:23)
  at <module> (tests/js_error/source_locations/statement/for_await/get_async_iterator_module.js:11:7)